--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "las-reader": "^1.0.19",
     "multer": "^1.4.5-lts.1"
